syntax = "proto3";

option go_package = "github.com/virtual-disk-array/vda/pkg/proto/cnagentapi";

package cnagentapi;

service CnAgent {
  rpc SyncupCn(SyncupCnRequest) returns(SyncupCnReply) {}
  rpc CnHeartbeat(CnHeartbeatRequest) returns(CnHeartbeatReply) {}
}

message ReplyInfo {
  uint64 reply_code = 1;
  string reply_msg = 2;
}

message ErrInfo {
  bool is_err = 1;
  string err_msg = 2;
  string timestamp = 3;
}

message NvmfListener {
  string tr_type = 1;
  string adr_fam = 2;
  string tr_addr = 3;
  string tr_svc_id = 4;
}

message BdevIostat {
  uint64 tick_rate = 1;
  uint64 bytes_read = 2;
  uint64 num_read_ops = 3;
  uint64 bytes_written = 4;
  uint64 num_write_ops = 5;
  uint64 bytes_unmapped = 6;
  uint64 num_unmap_ops = 7;
  uint64 read_latency_ticks = 8;
  uint64 write_latency_ticks = 9;
  uint64 unmap_latency_ticks = 10;
  uint64 queue_depth_polling_period = 11;
  uint64 queue_depth = 12;
  uint64 io_time = 13;
  uint64 weighted_io_time = 14;
}

message BdevHistgram {
  string histogram = 1;
  uint64 tsc_rate = 2;
  uint32 bucket_shift = 3;
}

message Lvstore {
  uint64 free_clusters = 1;
  uint64 total_data_clusters = 2;
  uint64 cluster_size = 3;
  uint64 block_size = 4;
}

message SnapAttr {
  bool snapshot = 1;
  bool clone = 2;
  string base_snapshot = 3;
  repeated string clones = 4;
}

message Controller {
  string cntlr_id = 1;
  string cn_sock_addr = 2;
  uint32 cntlr_idx = 3;
}

message VdFeConf {
  NvmfListener dn_nvmf_listener = 1;
  string dn_sock_addr = 2;
  uint64 size = 3;
}

message VdFeInfo {
  ErrInfo err_info = 1;
}

message GrpFeConf {
  uint64 size = 1;
  repeated VdFeConf vd_fe_conf_list = 2;
}

message GrpFeInfo {
  ErrInfo err_info = 2;
}

message SnapFeConf {
  string ori_name = 1;
  uint64 size = 2;
}

message SnapFeInfo {
  ErrInfo err_ifno = 1;
  SnapAttr snap_attr = 2;
}

message ExpFeConf {
  string initiator_nqn = 1;
  string snap_name = 2;
}

message ExpFeInfo {
  ErrInfo err_info = 1;
  BdevIostat bdev_iostat = 2;
  BdevHistgram bdev_histgram = 3;
}

message CntlrFeConf {
  bool is_primary = 1;
  uint32 stripe_cnt = 2;
  repeated Controller cntlr_list = 5;
}

message CntlrFeInfo {
  ErrInfo err_info = 1;
  Lvstore lvstore = 2;
}

message CnInfo {
  ErrInfo err_info = 1;
}

message VdFeReq {
  string vd_id = 1;
  VdFeConf vd_fe_conf = 2;
}

message GrpFeReq {
  string grp_id = 1;
  GrpFeConf grp_fe_conf = 2;
  repeated VdFeReq vd_fe_req_list = 3;
}

message SnapFeReq {
  string snap_id = 1;
  SnapFeConf snap_fe_conf = 2;
}

message ExpFeReq {
  string exp_id = 1;
  ExpFeConf exp_fe_conf = 2;
}

message CntlrFeReq {
  string cntlr_id = 1;
  CntlrFeConf cntlr_fe_conf = 2;
  repeated GrpFeReq grp_fe_req_list = 3;
  repeated SnapFeReq snap_fe_req = 4;
  repeated ExpFeReq exp_fe_req = 5;
}

message CnReq {
  string cn_id = 1;
  repeated CntlrFeReq cntlr_fe_req_list = 2;
}

message SyncupCnRequest {
  string req_id = 1;
  uint64 revision = 2;
  CnReq cn_req = 3;
}

message VdFeRsp {
  string vd_fe_id = 1;
  VdFeInfo vd_fe_info = 2;
}

message GrpFeRsp {
  string grp_id = 1;
  GrpFeInfo grp_fe_info = 2;
  repeated VdFeRsp vd_fe_rsp_list = 3;
}

message SnapFeRsp {
  string snap_id = 1;
  SnapFeInfo snap_fe_info = 2;
}

message ExpFeRsp {
  string exp_id = 1;
  ExpFeInfo exp_fe_info = 2;
}

message CntlrFeRsp {
  string cntlr_id = 1;
  CntlrFeInfo cntlr_fe_info = 2;
  repeated GrpFeRsp grp_fe_rsp_list = 3;
  repeated SnapFeRsp snap_fe_rsp_list = 4;
  repeated ExpFeRsp exp_fe_rsp_list = 5;
}

message CnRsp {
  string cn_id = 1;
  CnInfo cn_info = 2;
  repeated CntlrFeRsp cntlr_fe_rsp_list = 3;
}

message SyncupCnReply {
  ReplyInfo reply_info = 1;
  CnRsp cn_rsp = 2;
}

message CnHeartbeatRequest {
  string req_id = 1;
}

message CnHeartbeatReply {
  ReplyInfo reply_info = 1;
}